# teapp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  taskfile.yml
.github/workflows/: build.yml
cleaner/: main.go
teapp/: CMakeLists.txt
teapp/sources/: main.cpp  person.hpp
